--- a/style.css
+++ b/style.css
@@ -502,7 +502,9 @@ p,h1{
 }
 
 
-@media screen and (max-width: 576px) {
+
+
+@media screen and (max-width: 480px) {
     .circle {
         width: 170px;
         height: 170px;
@@ -511,7 +513,7 @@ p,h1{
     
     
     .background-square {
-        top: -10%;
+        top: -7%;
     }
     
     .inner-circle {
@@ -520,10 +522,14 @@ p,h1{
     }
 
     .circle-container{
-        margin-top: 16rem;
+        margin-top: 10rem;
         height: 200vw;
     }
 
+    .circle::before{
+        width: 101.8%;
+        height: 101.8%;
+    }
 
 
     .segment p{
@@ -532,33 +538,167 @@ p,h1{
     }
 
     .segment:nth-child(1) {
-        transform: rotate(0deg) translate(75px);
+        transform: rotate(9deg) translate(75px);
     }
 
     .segment:nth-child(2) {
-        transform: rotate(48.42deg) translate(75px);
+        transform: rotate(60.42deg) translate(75px);
     }
 
     .segment:nth-child(3) {
-        transform: rotate(103.84deg) translate(75px);
+        transform: rotate(111.84deg) translate(75px);
     }
 
     .segment:nth-child(4) {
-        transform: rotate(152.26deg) translate(75px);
+        transform: rotate(161.26deg) translate(75px);
     }
 
     .segment:nth-child(5) {
-        transform: rotate(209.68deg) translate(75px);
+        transform: rotate(214.68deg) translate(75px);
     }
 
     .segment:nth-child(6) {
-        transform: rotate(253.1deg) translate(75px);
+        transform: rotate(264.1deg) translate(75px);
     }
 
     .segment:nth-child(7) {
-        transform: rotate(307.52deg) translate(75px);
+        transform: rotate(317.52deg) translate(75px);
     }
 
+    /*About Me*/
+    .segment:nth-child(1) p:nth-child(1) { 
+        transform: rotate(77deg) translateY(2px);
+        }
+    .segment:nth-child(1) p:nth-child(2) { 
+        transform: rotate(87deg) translateY(0px);
+        }
+    .segment:nth-child(1) p:nth-child(3) { 
+        transform: rotate(92deg) translateY(-1px);
+        }
+    .segment:nth-child(1) p:nth-child(4) { 
+        transform: rotate(98deg) translateY(0px);
+        }
+    .segment:nth-child(1) p:nth-child(5) { 
+        transform: rotate(103deg) translateY(2px);
+        }
+
+
+
+    /*Thesis*/
+    .segment:nth-child(2) p:nth-child(1) { 
+        transform: rotate(71deg) translateY(2px);
+        }
+    .segment:nth-child(2) p:nth-child(2) { 
+        transform: rotate(80deg) translateY(0px);
+        }
+    .segment:nth-child(2) p:nth-child(3) { 
+        transform: rotate(88deg) translateY(-1px);
+        }
+    .segment:nth-child(2) p:nth-child(4) { 
+        transform: rotate(98deg) translateY(-1px);
+        }
+    .segment:nth-child(2) p:nth-child(5) { 
+        transform: rotate(106deg) translateY(1px);
+        }
+    .segment:nth-child(2) p:nth-child(6) { 
+        transform: rotate(113deg) translateY(3px);
+        }
+
+
+        
+    /*Texel*/
+    .segment:nth-child(3) p:nth-child(1) { 
+        transform: rotate(72deg) translateY(3px);
+        }
+    .segment:nth-child(3) p:nth-child(2) { 
+        transform: rotate(79deg) translateY(0px);
+        }
+    .segment:nth-child(3) p:nth-child(3) { 
+        transform: rotate(90deg) translateY(-1px);
+        }
+    .segment:nth-child(3) p:nth-child(4) { 
+        transform: rotate(103deg) translateY(0px);
+        }
+    .segment:nth-child(3) p:nth-child(5) { 
+        transform: rotate(113deg) translateY(3px);
+        }
+
+        
+    /*AmsterdamInn*/
+    .segment:nth-child(4) p:nth-child(1) { 
+        transform: rotate(76deg) translateY(3px);
+        }
+    .segment:nth-child(4) p:nth-child(2) { 
+        transform: rotate(78deg) translateY(1px);
+        }
+    .segment:nth-child(4) p:nth-child(3) { 
+        transform: rotate(87deg) translateY(-0.5px);
+        }
+    .segment:nth-child(4) p:nth-child(4) { 
+        transform: rotate(94deg) translateY(-0.5px);
+        }
+    .segment:nth-child(4) p:nth-child(5) { 
+        transform: rotate(106deg) translateY(1px);
+        }
+    .segment:nth-child(4) p:nth-child(6) { 
+        transform: rotate(111deg) translateY(4px);
+        }
+    
+
+    /*Elio*/
+    .segment:nth-child(5) p:nth-child(1) { 
+        transform: rotate(75deg) translateY(3px);
+        }
+    .segment:nth-child(5) p:nth-child(2) { 
+        transform: rotate(86deg) translateY(1px);
+        }
+    .segment:nth-child(5) p:nth-child(3) { 
+        transform: rotate(96deg) translateY(1px);
+        }
+    .segment:nth-child(5) p:nth-child(4) { 
+        transform: rotate(108deg) translateY(3px);
+        }
+
+
+    /*Animation*/
+    .segment:nth-child(6) p:nth-child(1) { 
+        transform: rotate(76deg) translateY(2px);
+        }
+    .segment:nth-child(6) p:nth-child(2) { 
+        transform: rotate(82deg) translateY(0px);
+        }
+    .segment:nth-child(6) p:nth-child(3) { 
+        transform: rotate(87deg) translateY(-1px);
+        }
+    .segment:nth-child(6) p:nth-child(4) { 
+        transform: rotate(95deg) translateY(-1px);
+        }
+    .segment:nth-child(6) p:nth-child(5) { 
+        transform: rotate(110deg) translateY(0px);
+        }
+    .segment:nth-child(6) p:nth-child(6) { 
+        transform: rotate(115deg) translateY(3px);
+        }
+
+
+
+
+    /*Games*/
+    .segment:nth-child(7) p:nth-child(1) { 
+        transform: rotate(76deg) translateY(1px);
+        }
+    .segment:nth-child(7) p:nth-child(2) { 
+        transform: rotate(84deg) translateY(-1px);
+        }
+    .segment:nth-child(7) p:nth-child(3) { 
+        transform: rotate(89deg) translateY(-2px);
+        }
+    .segment:nth-child(7) p:nth-child(4) { 
+        transform: rotate(99deg) translateY(-1.5px);
+        }
+    .segment:nth-child(7) p:nth-child(5) { 
+        transform: rotate(106deg) translateY(0.5px);
+        }
 
     .icons {
         display: flex;
@@ -568,31 +708,33 @@ p,h1{
         left: 50%;
         transform: translateX(-50%);
         margin-right: -3rem;
-        bottom: 0rem;
+        bottom: 1rem;
     }
 
     .previous::before{
         width: 300px;
-        height: 260px
+        height: 260px;
+        left: -2.5rem;
     }
 
     .next::before{
-        width: 360px;
-        height: 330px;
-        bottom: -2rem;
+        width: 300px;
+        height: 250px;
+        bottom: -1rem;
+        left: 0rem;
     }
 
     .next h1{
         font-size: 27px;
     }
     .next p{
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         margin: auto;
         width: 90%;
     }
 
     .previous img{
-        width: 250px;
+        width: 200px;
     }
 
     .left_corner h1 {
@@ -615,7 +757,7 @@ p,h1{
         font-family: 'Alumni Sans';
         font-size: 18px;
         color: #CBCBE3;
-        
+        top: 0.5rem;
     }
 
     #content1 h1 {
@@ -629,5 +771,21 @@ p,h1{
     #content1 h3 {
         font-size: 40px;
         margin-top: -5rem;
+    }
+}
+
+
+@media screen and (max-width: 440px) {
+.background-square {
+    top: -8%;
+}
+
+}
+
+
+@media screen and (max-width: 400px) {
+
+    .background-square {
+        top: -9%;
     }
 }
